'响应式初始化和文章右部'

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,130 @@
 
+.container{
+    box-sizing: border-box;
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+@media (min-width: 992px){
+    .container {
+        width: 960px;
+    }
+
+}
+
+@media (max-width: 1080px) {
+    .container {
+        width: 750px;
+    }
+
+    .container .hiddle-750{
+        display: none;
+    }
+
+    .container .header-middle-item input{
+        width:150px;
+    }
+
+    .container .QR_code{
+        padding: 7px 10px;
+    }
+
+    .QR_code .min_erweima img{
+        width: 50px;
+        height: 50px;
+    }
+
+    .QR_code .czou{
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 768px) {
+    .header-middle{
+        display: none;
+    }
+    
+    .show-768{
+        display:block !important;
+    }
+
+}
+
+.col-xs-16 {
+    float: left;
+    width: 66.66667%;
+    background-color: yellow;
+}
+
+.col-xs-offset-1 {
+    margin-left: 4.16667%;
+}
+
+.col-xs-7 {
+    float: left;
+    width: 29.16667%;
+}
+
+.clearFloat::after{
+    content: '';
+    display: block;
+    clear: both;
+}
+
+.rotate-donghua-720 {
+    animation: rotateD 1s linear ;
+    animation-fill-mode:forwards;
+    transform: rotate(0);
+}
+
+@keyframes rotateD {
+    0%{
+        transform: rotate(0);
+    }
+
+    50%{
+        transform: rotate(360deg);
+    }
+
+    100%{
+        transform: rotate(720deg);
+    }
+}
+
+.max_btn{
+    box-sizing: border-box;
+    width: 100%;
+    padding: 8px ;
+    text-align: center;
+    background-color: #f7f7f7;
+    border: 1px solid #dcdcdc;
+    border-radius: 4px;
+    font-size: 13px;
+    color: #787878;
+}
+
+.shou{
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 html,
 body,
 div,
@@ -162,4 +288,5 @@ table {
 
 a{
     text-decoration: none;
+    color: black;
 }
