--- a/src/header/index.css
+++ b/src/header/index.css
@@ -1,9 +1,3 @@
-@media (min-width: 992px){
-    .container {
-        width: 960px;
-    }
-}
-
 .bott-b{
     box-sizing: border-box;
     height: 56px;
@@ -27,18 +21,20 @@
 
 .header-middle{
     box-sizing: border-box;
-    padding: 8px 0;
+    padding-top: 8px;
+    padding-bottom: 8px;
     height: 56px;
-    margin-right: auto;
-    margin-left: auto;
-    padding-left: 15px;
-    padding-right: 15px;
     align-items:center ;
 }
 
 .header-middle-item{
     display: inline-block;
     padding:  0 15px;
+}
+
+.show-768{
+    line-height: 56px;
+    display:none;
 }
 
 .header-middle-item input{
