--- a/src/main/friendBanner/index.css
+++ b/src/main/friendBanner/index.css
@@ -73,7 +73,7 @@
     font-size: 14px;
 }
 
-.article_list_item{
+.author_list_item{
     position: relative;
     display: flex;
     margin-top: 15px;
@@ -85,7 +85,7 @@
     right: 0;
 }
 
-.article_list_item img{
+.author_list_item img{
     display: block;
     width:48px;
     height: 48px;
