--- a/src/header/index.css
+++ b/src/header/index.css
@@ -139,3 +139,36 @@
     background-size: contain;
     background-repeat: no-repeat;
 }
+
+.history-list{
+    position: absolute;
+    top: 51px;
+    left: 15px;
+    padding: 12px;
+    background-color: #fff;
+    border: 1px solid #f0f0f0;
+    border-radius: 6px;
+    box-shadow: 0 0 20px -10px #000;
+    margin: 0 auto;
+    z-index: 99;
+}
+
+.history-list-item{
+    position: absolute;
+    left: 30px;
+    right: 0;
+    top: -10px;
+    width: 20px;
+    height: 20px;
+    border: 1px solid #f0f0f0;
+    border-bottom: transparent;
+    border-right: transparent;
+    background-color: #fff;
+    z-index: -23;
+    transform: rotate(45deg);
+}
+
+.history-list-hover:hover{
+    width: 100%;
+    background: #f0f0f0;
+}
