--- a/src/index.css
+++ b/src/index.css
@@ -132,8 +132,22 @@ animation-fill-mode:forwards;
     text-decoration: underline;
 }
 
+.loading{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.05);
+    z-index: 9999;
+    text-align: center;
+    margin-top: 350px ;
+}
 
-
+.white-space{
+    width:100%;
+    text-overflow:ellipsis;
+    overflow:hidden;
+    white-space:nowrap;
+}
 
 
 
